# terrain_and_stuff

./: .gitattributes  .gitignore  Cargo.toml  README.md  random_ideas.md  todo.txt
assets/: heightmap-source.txt  heightmap.tif
assets/bluenoise/: license.txt
sketches/: .gitignore  pyproject.toml  sphere_sampling.py
terrain_and_stuff/: Cargo.toml  build.rs
terrain_and_stuff/shaders/: camera.wgsl  constants.wgsl  debug_draw_shadow_map.wgsl  display_transform.wgsl  global_bindings.wgsl  intersections.wgsl  sampling.wgsl  screen_triangle.wgsl  sh.wgsl  sky.wgsl  srgb.wgsl  terrain.wgsl
terrain_and_stuff/shaders/atmosphere/: compute_sh.wgsl  constants.wgsl  lut_multiple_scattering.wgsl  lut_transmittance.wgsl  params.wgsl  raymarch.wgsl  raymarch_sky.wgsl  render_atmosphere.wgsl  scattering.wgsl  sky_and_sun_lighting.wgsl  transmittance_lut.wgsl
terrain_and_stuff/shaders/sky/: constants.wgsl  raymarch_sky.wgsl  scattering.wgsl  transmittance_lut.wgsl
terrain_and_stuff/src/: atmosphere.rs  bluenoise.rs  camera.rs  config.rs  egui_minifb.rs  gui.rs  gui_window.rs  main.rs  main_desktop.rs  main_web.rs  primary_depth_buffer.rs  result_ext.rs  sampling.rs  screen_triangle.rs  shadowmap.rs  sky.rs
terrain_and_stuff/src/gui/: mod.rs  ui_elements.rs
terrain_and_stuff/src/render_output/: hdr_backbuffer.rs  mod.rs  screen.rs
terrain_and_stuff/src/resource_managers/: global_bindings.rs  mod.rs  pipelines.rs  shader_cache.rs
terrain_and_stuff/src/terrain/: mod.rs  renderer.rs
terrain_and_stuff/src/wgpu_error_handling/: README.md  error_tracker.rs  mod.rs  wgpu_core_error.rs  wgpu_error_scope.rs
terrain_and_stuff/src/wgpu_utils/: binding_builder.rs  mod.rs  wgpu_buffer_types.rs
terrain_and_stuff/web_resources/: index.html
xtask/: Cargo.toml
xtask/src/: main.rs  run_wasm.rs
