[workspace]
resolver = "2"
members = ["terrain_and_stuff", "xtask"]
default-members = ["terrain_and_stuff"]

[patch.crates-io]
# Because someone gotta test the cutting edge!
#wgpu = { git = "https://github.com/gfx-rs/wgpu", branch = "trunk" }
#naga = { git = "https://github.com/gfx-rs/wgpu", branch = "trunk" }
#naga_oil = { git = "https://github.com/wumpf/naga_oil", branch = "cutting-edge-wgpu" }

wgpu = { git = "https://github.com/wumpf/wgpu", rev = "e6cd0bea01e1dae30628a79b2d9ab97a353f350c" }
#wgpu-types = { git = "https://github.com/wumpf/wgpu", rev = "e6cd0bea01e1dae30628a79b2d9ab97a353f350c" }
#naga = { git = "https://github.com/wumpf/wgpu", rev = "e6cd0bea01e1dae30628a79b2d9ab97a353f350c" }
#wgpu-hal = { git = "https://github.com/wumpf/wgpu", rev = "e6cd0bea01e1dae30628a79b2d9ab97a353f350c" }


#minifb = { path = "../rust_minifb" }
