[workspace]
resolver = "2"
default-members = ["terrain_and_stuff"]
members = ["terrain_and_stuff", "xtask"]

[workspace.package]
edition = "2024"

[patch.crates-io]
# Because someone gotta test the cutting edge!
#wgpu = { git = "https://github.com/gfx-rs/wgpu", branch = "trunk" }

#egui = { git = "https://github.com/emilk/egui", branch = "main" }
#egui-wgpu = { git = "https://github.com/emilk/egui", branch = "main" }

minifb = { git = "https://github.com/emoon/rust_minifb", branch = "master" }


#wgpu = { path = "../wgpu/wgpu" }
#wgpu-types = { path = "../wgpu/wgpu-types" }
#naga = { path = "../wgpu/naga" }
#wgpu-hal = { path = "../wgpu/wgpu-hal" }

#minifb = { path = "../rust_minifb" }
