[package]
name = "terrain_and_stuff"
version = "0.1.0"
edition.workspace = true

[dependencies]
wgpu = { version = "27.0.1", default-features = false, features = [
  # No WebGL supported!
  "webgpu",
  # Don't care about DX12, using Vulkan limits variety more.
  "metal",
  "vulkan",
  # Shaders are in wgsl.
  "wgsl",
  # No time for Send/Sync headaches on the web.
  "fragile-send-sync-non-atomic-wasm",
] }

anyhow = "1.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
ddsfile = "0.5.2"
egui = "0.33.0"
egui-wgpu = { version = "0.33.0", default-features = false }
glam = { version = "0.30.0", features = ["bytemuck", "serde"] }
itertools = "0.14.0"
log = "0.4.28"                                                  # Logging, mostly since println can't be used on the web.
macaw = "0.30.0"
minifb = "0.28.0"
parking_lot = "0.12.3"
png = "0.18.0"
ron = "0.11"
serde = { version = "1", features = ["derive"] }
slotmap = "1.0.7"
thiserror = "2.0.11"
tiff = "0.10.3"
web-time = { version = "1.1.0", default-features = false }
wesl = "0.2.0"
wgpu-profiler = "0.25.0"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native only dependencies.
pollster = "0.4.0"
env_logger = { version = "0.11.8", default-features = false, features = [
  "auto-color",
  "humantime",
] }
notify = "8.0.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
# Web only dependencies.
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.53"

[build-dependencies]
walkdir = "2.5.0"
